# DynamicBusinessLandingPage

./: .gitignore  AGENTS_OPENAI_INTEGRATION.md  AGENT_ARCHITECTURE.md  BUILD_DEBUGGING.md  CHANGES_SUMMARY.md  COMPLETE_IMPLEMENTATION.md  DEBUGGING_GUIDE.md  DEPLOYMENT.md  DETERMINISTIC_DESIGN_SYSTEM.md  ENHANCED_QUALITY_GATES.md  IMPLEMENTATION_SUMMARY.md  KILL_SERVERS.ps1  NEXT_STEPS.md  PROJECT_DESCRIPTION.md  PROJECT_STRUCTURE.md  QUALITY_GATES_DOCUMENTATION.md  README.md  SCAFFOLD_SUMMARY.md  SERVER_STATUS.md  SETUP_COMPLETE.md  SETUP_GUIDE.md  START_HERE.md  STOCK_IMAGE_API_MIGRATION.md  UNSPLASH_SETUP.md  deploy.sh  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  package-lock.json  start-backend.ps1  start-dev.ps1  start-frontend.ps1  test_build_endpoint.py  test_full_build_flow.py
agents/: .gitignore  (+8 more)
backend/: AGENTS_MIGRATION.md  Dockerfile  README_SETUP.md  pyproject.toml  pytest.ini  requirements.txt
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  architect.py  client.py  generator.py  mapper.py  orchestrator.py  qa.py  selector.py
backend/app/api/: __init__.py  build.py  build_simple.py  progress.py  result.py
backend/app/core/: artifact_store.py  cache.py  config.py  google_fetcher.py  state_machine.py
backend/app/models/: errors.py  normalized_data.py  schemas.py
backend/app/utils/: sanitization.py
backend/assets/images/: README.txt
backend/landing_api/: main.py
backend/landing_api/api/: __init__.py  build.py  build_new.py  build_old_backup.py  events.py  mcp.py  progress.py  result.py
(+171 files in other folders)
